2005-10-15  Thomas Schwinge  <tschwinge@gnu.org>

	* include/dirent.h: Include <stdbool.h>.
	* sysdeps/mach/hurd/fdopendir.c: Include <fcntl.h>.
	(fdopendir): Correct argument to _hurd_fd_get().
	* sysdeps/mach/hurd/opendir.c (__opendir): Remove stray `}'.

2005-08-20  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #1224]
	* posix/regcomp.c (init_word_char, duplicate_node_closure,
	fetch_token, peek_token_bracket, build_range_exp,
	build_collating_symbol): Remove forward decls; no longer needed
	now that we use prototypes.

2005-10-15  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1221]
	* posix/regex_internal.h: Remove last traces of
	RE_NO_INTERNAL_PROTOTYPES.

	[BZ #968]
	* string/strxfrm_l.c (STRXFRM): Fix exit conditions of two loops.

	* sysdeps/unix/fdopendir.c (fdopendir): Make sure descriptor
	allows reading.

	* wcsmbs/tst-mbrtowc2.c: Use de_DE.UTF-8 instead of en_US.UTF-8.
	* wcsmbs/Makefile: Define tst-mbrtowc2-ENV.

	* posix/regexec.c: Finish prototyping of static functions.
	* posix/regex_internal.c: Likewise.

2005-10-14  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/opendir.c (_hurd_fd_opendir): New function, broken
	out of ...
	(__opendir): ... here.  Call it.
	* sysdeps/mach/hurd/fdopendir.c: New file.

2005-10-14  Ulrich Drepper  <drepper@redhat.com>

	[BZ #865]
	* math/tgmath.h: Correctly determine result type for
	__TGMATH_BINARY_REAL_ONLY,
	__TGMATH_TERNARY_FIRST_SECOND_REAL_ONLY,
	__TGMATH_TERNARY_REAL_ONLY, and __TGMATH_BINARY_REAL_IMAG.

2005-09-17  Andreas Jaeger  <aj@suse.de>

	[BZ #865]
	* math/test-tgmath-int.c: New file.
	* math/Makefile (tests): Add test-tgmath-int.

2005-10-14  Ulrich Drepper  <drepper@redhat.com>

	[BZ #804]
	* malloc/tst-mtrace.sh: Work around for bootstraping.

	* locale/programs/ld-collate.c (collate_output): Fix counting of
	elements.  Don't limit table size.  Use correct secondary hash
	function.
	* locale/localeinfo.h (LIMAGIC): Change value returned for LC_COLLATE.